--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "scripts": { "start": "node index.js" },
   "dependencies": {
-    "node-telegram-bot-api": "^0.66.0",
-    "openai": "^4.0.0"
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
   }
 }
